--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/paymentdb
+spring.datasource.username=postgres
+spring.datasource.password=Mudar@2023
 spring.jpa.show-sql=false
 
 spring.jpa.hibernate.ddl-auto=create
+
+app.uri=${CEP_URL:https://viacep.com.br/ws/{cep}/json/}
